--- a/docs/POSDE_bookdown.tex
+++ b/docs/POSDE_bookdown.tex
@@ -2673,7 +2673,7 @@ Elizabeth Holmes and Ramesh Balwani raised more than US\$700 million through ``e
 Holmes studied chemical engineering at Stanford University in California but dropped out in her second year to start the company that later became Theranos.
 The company's board was crowded with political figures and relevant names. It included former secretaries of state George Shultz and Henry Kissinger, secretaries of defence, and former senators. It also managed to partner with companies such as the supermarket giant Safeway, and the pharmacy chain Walgreens. Channing Robertson, a professor of Holmes's at Stanford, was also a board member and adviser to the company. She was praised by then-president Barack Obama and then-vice-president Joe Biden.
 
-The main mistakes made by the company and its founders included a complete oversell of the product. The idea was of course great, but good ideas (or desires) are not enough. For instance, ot is rather easy to say ``wouldn't be nice to breath underwater with a cheap and light equipment that provided several days of autonomy?'' or ``wouldn't be nice to produce energy at half the cost?''. Yes, it would be amazing. But the idea is not enough, we need to show \emph{how} we reach the goal, idea or desire we propose. That is were the strength of the idea lies. Moreover, several investors made the mistake of not sufficiently check the technology readiness of Theranos. Hidden behind non-disclosure agreements and secrecy, Theranos managed to grow and escape inspections. The key difference with other technological start-ups is that healthcare related companies must undertake an even greater degree of quality control and validation, since lives may be at risk.
+The main mistakes made by the company and its founders included a complete oversell of the product. The idea was of course great, but good ideas (or desires) are not enough. For instance, it is rather easy to say ``wouldn't be nice to breathe underwater with cheap and light equipment that provided several days of autonomy?'' or ``wouldn't be nice to produce energy at half the cost?''. Yes, it would be amazing. But the idea is not enough, we need to show \emph{how} we reach the goal, idea or desire we propose. That is where the strength of the idea lies. Moreover, several investors made the mistake of not sufficiently checking the technology readiness of Theranos. Hidden behind non-disclosure agreements and secrecy, Theranos managed to grow and escape inspections. The key difference with other technological start-ups is that healthcare-related companies must undertake an even greater degree of quality control and validation, since lives may be at risk.
 
 In particular, the solution of Theranos provided both false positives and false negatives, which put at risk the lives of many patients. In the end, Theranos required more than a single drop of blood to conduct the tests, but still less amount than the competition. However, the company diluted blood and ran the tests in machines from a different manufactured (hence not employing even their own product). Their accuracy numbers were forged by removing anomalous data points to increase the apparent performance.
 
