--- a/docs/POSDE_bookdown.tex
+++ b/docs/POSDE_bookdown.tex
@@ -2675,7 +2675,7 @@ The company's board was crowded with political figures and relevant names. It in
 
 The main mistakes made by the company and its founders included a complete oversell of the product. The idea was of course great, but good ideas (or desires) are not enough. For instance, it is rather easy to say ``wouldn't be nice to breathe underwater with cheap and light equipment that provided several days of autonomy?'' or ``wouldn't be nice to produce energy at half the cost?''. Yes, it would be amazing. But the idea is not enough, we need to show \emph{how} we reach the goal, idea or desire we propose. That is where the strength of the idea lies. Moreover, several investors made the mistake of not sufficiently checking the technology readiness of Theranos. Hidden behind non-disclosure agreements and secrecy, Theranos managed to grow and escape inspections. The key difference with other technological start-ups is that healthcare-related companies must undertake an even greater degree of quality control and validation, since lives may be at risk.
 
-In particular, the solution of Theranos provided both false positives and false negatives, which put at risk the lives of many patients. In the end, Theranos required more than a single drop of blood to conduct the tests, but still less amount than the competition. However, the company diluted blood and ran the tests in machines from a different manufactured (hence not employing even their own product). Their accuracy numbers were forged by removing anomalous data points to increase the apparent performance.
+In particular, the solution of Theranos provided both false positives and false negatives, which put at risk the lives of many patients at. In the end, Theranos required more than a single drop of blood to conduct the tests, but still less amount than the competition. However, the company diluted blood and ran the tests in machines from a different manufacturer (hence not employing even their product). Their accuracy numbers were forged by removing anomalous data points to increase the apparent performance.
 
 \begin{quote}
 {[}\ldots{]} nearly 1 million lab tests had been run in California and Arizona. A significant proportion of these were erroneous; all had to be voided. An untold number of people were harmed by the erroneous results: some underwent unnecessary procedures, received misdiagnoses of serious conditions and experienced emotional turmoil. --- \citep{topol2018blood}
