--- a/book.bib
+++ b/book.bib
@@ -709,11 +709,24 @@ publisher={University of Prince Edward Island}
   publisher={" O'Reilly Media, Inc."}
 }
 
+@article{griffith2020collider,
+  title={Collider bias undermines our understanding of COVID-19 disease risk and severity},
+  author={Griffith, Gareth J and Morris, Tim T and Tudball, Matthew J and Herbert, Annie and Mancano, Giulia and Pike, Lindsey and Sharp, Gemma C and Sterne, Jonathan and Palmer, Tom M and Davey Smith, George and others},
+  journal={Nature communications},
+  volume={11},
+  number={1},
+  pages={1--12},
+  year={2020},
+  publisher={Nature Publishing Group}
+}
 
-@article{garcia2021need,
-  title={The need of standardised metadata to encode causal relationships: Towards safer data-driven machine learning biological solutions},
+@inproceedings{garcia2021need,
+  title={The Need of Standardised Metadata to Encode Causal Relationships: Towards Safer Data-Driven Machine Learning Biological Solutions},
   author={Garcia, Beatriz and Vega, Carlos and Hertel, Frank},
-  year={2021}
+  booktitle={International Meeting on Computational Intelligence Methods for Bioinformatics and Biostatistics},
+  pages={200--216},
+  year={2022},
+  organization={Springer}
 }
 
 
